--- a/css/style.scss
+++ b/css/style.scss
@@ -68,7 +68,7 @@ body {
 .header {
     width: 100%;
     height: 715px;
-    background: url("/img/header-main/header-main-bg.jpg") no-repeat center center;
+    background: url("../img/header-main/header-main-bg.jpg") no-repeat center center;
     background-size: cover;
 
     .container {
